--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "124edc59",
+   "id": "83737bc9",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a19bc3b9",
+   "id": "1ceb4ca2",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8e42453",
+   "id": "dce4fc9a",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "deb30a89",
+   "id": "719ca341",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c2f5b8d2",
+   "id": "ebc74aea",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f75994c1",
+   "id": "0c63daab",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ba1db39e",
+   "id": "72ffd3e8",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8a6ea318",
+   "id": "55180164",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "16682dc2",
+   "id": "498fef66",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "49205fce",
+   "id": "a380a050",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cdb88919",
+   "id": "8370f5f2",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ba8c56ff",
+   "id": "da72e2c6",
    "metadata": {},
    "outputs": [
     {
@@ -286,8 +286,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "10b45cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C=np.dot(A,B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c8fddafd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 300  360  420]\n",
+      " [ 660  810  960]\n",
+      " [1020 1260 1500]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "56083eb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('joe', 2, 2.4) ('mary', 5, 3.2) ('john', 6, 1.5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.array([('joe',2,2.4),('mary',5,3.2),('john',6,1.5)], \n",
+    "                dtype=[('nome',str,10),('idade', int),('altura',float)])\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c6c66eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nomes:  ['joe' 'mary' 'john']\n",
+      "idades:  [2 5 6]\n",
+      "alturas:  [2.4 3.2 1.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Nomes: ',data['nome'])\n",
+    "print('idades: ',data['idade'])\n",
+    "print('alturas: ',data['altura'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "03669e89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('joe', 2, 2.4)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cc7217d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\lab\\python311\\lib\\site-packages (2.0.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\lab\\python311\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\lab\\python311\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\lab\\python311\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\lab\\python311\\lib\\site-packages (from pandas) (1.24.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\lab\\python311\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5eab93ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7c1a8a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X1</th>\n",
+       "      <th>X2</th>\n",
+       "      <th>X3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>b</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>c</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>d</td>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>e</td>\n",
+       "      <td>0.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   X1 X2   X3\n",
+       "0   1  a  0.2\n",
+       "1   2  b  0.4\n",
+       "2   3  c  0.5\n",
+       "3   4  d  0.6\n",
+       "4   5  e  0.7"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X={'X1':[1,2,3,4,5,6,7,8],'X2': ['a','b','c', 'd','e','f','g','h'], 'X3':[.2,.4,.5,.6,.7,.8,.9,1.]}\n",
+    "df =pd.DataFrame(data=X)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c7a78b8c",
+   "id": "237890d0",
    "metadata": {},
    "outputs": [],
    "source": []
