--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "83737bc9",
+   "id": "5054321c",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1ceb4ca2",
+   "id": "03d6b80d",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dce4fc9a",
+   "id": "8d0c8535",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "719ca341",
+   "id": "4d6e03f0",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ebc74aea",
+   "id": "46425c66",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0c63daab",
+   "id": "de600876",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "72ffd3e8",
+   "id": "504e53e0",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "55180164",
+   "id": "040bf0f3",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "498fef66",
+   "id": "c1aaaf85",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a380a050",
+   "id": "490a17b7",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8370f5f2",
+   "id": "f03a0614",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "da72e2c6",
+   "id": "360a2222",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "10b45cfc",
+   "id": "b204f4a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c8fddafd",
+   "id": "4e5a68ab",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "56083eb4",
+   "id": "8110fc79",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c6c66eeb",
+   "id": "ec4954f9",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "03669e89",
+   "id": "07a13345",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cc7217d9",
+   "id": "a8bbfad4",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5eab93ba",
+   "id": "38cf1e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7c1a8a07",
+   "id": "314202c1",
    "metadata": {},
    "outputs": [
     {
@@ -508,8 +508,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "22ad958f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a62740bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1      4\n",
+      "X2      d\n",
+      "X3    0.6\n",
+      "Name: 3, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[3,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "99a73e1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 'a' 0.2]\n",
+      " [2 'b' 0.4]\n",
+      " [3 'c' 0.5]\n",
+      " [4 'd' 0.6]\n",
+      " [5 'e' 0.7]\n",
+      " [6 'f' 0.8]\n",
+      " [7 'g' 0.9]\n",
+      " [8 'h' 1.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "I = np.array(df)\n",
+    "print(I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "740eeac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero de linhas e colunas =  (150, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal.length</th>\n",
+       "      <th>sepal.width</th>\n",
+       "      <th>petal.length</th>\n",
+       "      <th>petal.width</th>\n",
+       "      <th>variety</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal.length  sepal.width  petal.length  petal.width variety\n",
+       "0           5.1          3.5           1.4          0.2  Setosa\n",
+       "1           4.9          3.0           1.4          0.2  Setosa\n",
+       "2           4.7          3.2           1.3          0.2  Setosa\n",
+       "3           4.6          3.1           1.5          0.2  Setosa\n",
+       "4           5.0          3.6           1.4          0.2  Setosa\n",
+       "5           5.4          3.9           1.7          0.4  Setosa\n",
+       "6           4.6          3.4           1.4          0.3  Setosa\n",
+       "7           5.0          3.4           1.5          0.2  Setosa\n",
+       "8           4.4          2.9           1.4          0.2  Setosa\n",
+       "9           4.9          3.1           1.5          0.1  Setosa"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('iris.csv', header =(0))\n",
+    "print(\"Numero de linhas e colunas = \", data.shape)\n",
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "237890d0",
+   "id": "dbcc3157",
    "metadata": {},
    "outputs": [],
    "source": []
