--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5054321c",
+   "id": "e032d098",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "03d6b80d",
+   "id": "288dcee9",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8d0c8535",
+   "id": "acb8bbe8",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4d6e03f0",
+   "id": "f44a2c19",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "46425c66",
+   "id": "00c2ed82",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "de600876",
+   "id": "4d5b5887",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "504e53e0",
+   "id": "808ad12f",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "040bf0f3",
+   "id": "c2848884",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c1aaaf85",
+   "id": "9fd5de3a",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "490a17b7",
+   "id": "a47e5b45",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f03a0614",
+   "id": "ecac4b6c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "360a2222",
+   "id": "d37506f8",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b204f4a6",
+   "id": "224ff381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4e5a68ab",
+   "id": "c14f21ca",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8110fc79",
+   "id": "937db33d",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ec4954f9",
+   "id": "9458513a",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "07a13345",
+   "id": "7a5fdd8e",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a8bbfad4",
+   "id": "83abb226",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "38cf1e08",
+   "id": "47d44835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "314202c1",
+   "id": "d0cf040e",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "22ad958f",
+   "id": "9b0f3fb3",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a62740bf",
+   "id": "705deda2",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "99a73e1c",
+   "id": "a367a699",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "740eeac0",
+   "id": "62b3fc32",
    "metadata": {},
    "outputs": [
     {
@@ -724,8 +724,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "8d20bdc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1.0\n",
+      "1    3.0\n",
+      "2    5.0\n",
+      "3    NaN\n",
+      "4    6.0\n",
+      "5    8.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s= pd.Series([1,3,5,np.nan,6,8])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "27d058d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dias DatetimeIndex(['2013-01-01', '2013-01-02', '2013-01-03', '2013-01-04'], dtype='datetime64[ns]', freq='D')\n",
+      "Meses DatetimeIndex(['2013-01-31', '2013-02-28', '2013-03-31', '2013-04-30'], dtype='datetime64[ns]', freq='M')\n",
+      "Anos DatetimeIndex(['2013-12-31', '2014-12-31', '2015-12-31', '2016-12-31'], dtype='datetime64[ns]', freq='A-DEC')\n"
+     ]
+    }
+   ],
+   "source": [
+    "dates = pd.date_range(\"20130101\", periods=4,freq='D')\n",
+    "print('Dias',dates)\n",
+    "dates = pd.date_range(\"20130101\", periods=4,freq='M')\n",
+    "print('Meses',dates)\n",
+    "dates = pd.date_range(\"20130101\", periods=4,freq='Y')\n",
+    "print('Anos',dates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "297f1b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.7.1-cp311-cp311-win_amd64.whl (7.6 MB)\n",
+      "     ---------------------------------------- 7.6/7.6 MB 452.2 kB/s eta 0:00:00\n",
+      "Collecting contourpy>=1.0.1\n",
+      "  Downloading contourpy-1.0.7-cp311-cp311-win_amd64.whl (162 kB)\n",
+      "     ------------------------------------ 163.0/163.0 kB 390.6 kB/s eta 0:00:00\n",
+      "Collecting cycler>=0.10\n",
+      "  Downloading cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
+      "Collecting fonttools>=4.22.0\n",
+      "  Downloading fonttools-4.39.3-py3-none-any.whl (1.0 MB)\n",
+      "     ---------------------------------------- 1.0/1.0 MB 292.0 kB/s eta 0:00:00\n",
+      "Collecting kiwisolver>=1.0.1\n",
+      "  Downloading kiwisolver-1.4.4-cp311-cp311-win_amd64.whl (55 kB)\n",
+      "     -------------------------------------- 55.4/55.4 kB 131.3 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.20 in c:\\lab\\python311\\lib\\site-packages (from matplotlib) (1.24.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\lab\\python311\\lib\\site-packages (from matplotlib) (23.0)\n",
+      "Collecting pillow>=6.2.0\n",
+      "  Downloading Pillow-9.5.0-cp311-cp311-win_amd64.whl (2.5 MB)\n",
+      "     ---------------------------------------- 2.5/2.5 MB 186.8 kB/s eta 0:00:00\n",
+      "Collecting pyparsing>=2.3.1\n",
+      "  Downloading pyparsing-3.0.9-py3-none-any.whl (98 kB)\n",
+      "     --------------------------------------- 98.3/98.3 kB 97.2 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\lab\\python311\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\lab\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+      "Successfully installed contourpy-1.0.7 cycler-0.11.0 fonttools-4.39.3 kiwisolver-1.4.4 matplotlib-3.7.1 pillow-9.5.0 pyparsing-3.0.9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e9deb3d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (1435361582.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[39], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    plt.plot(x,y,marker = 's', linestyle= '-', color='blue', linewidth)\u001b[0m\n\u001b[1;37m                                                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x=np.arange(0,2*np.pi,0.1)\n",
+    "y=np.sin(x)\n",
+    "z=np.cos(x)\n",
+    "plt.plot(x,y,marker = 's', linestyle= '-', color='blue', linewidth)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dbcc3157",
+   "id": "08afc96b",
    "metadata": {},
    "outputs": [],
    "source": []
